# rgb-lib-python

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Cross.toml  Dockerfile  README.md  build.py  build_in_docker.sh  build_packages.py  entrypoint.sh  generate.sh  pyproject.toml  uniffi-config.toml  wine.sh
demo/: .dockerignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  rgb-lib.ipynb  services.sh
rgb_lib/: __init__.py
src/rgb_lib/: __init__.py
src/rgb_lib/_rgb_lib/: __init__.py
